--- a/products.html
+++ b/products.html
@@ -3,7 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>资源套装 - COLIN</title>
+    <title>资源套装 - 30天实现成长蜕变 | COLIN</title>
+    <meta name="description" content="精选写作、目标、思维、学习四大成长套装，30天完成蜕变。包含30+模板、100+爆款标题，立即开始你的成长之旅。">
+    <meta name="keywords" content="写作套装,目标套装,思维套装,学习套装,个人成长,效率工具">
+
+    <!-- 产品结构化数据 -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "个人成长资源套装",
+        "image": "https://thecolin.vip/products.jpg",
+        "description": "精选写作、目标、思维、学习四大成长套装，30天完成蜕变。包含30+模板、100+爆款标题，立即开始你的成长之旅。",
+        "brand": {
+            "@type": "Brand",
+            "name": "COLIN"
+        },
+        "offers": {
+            "@type": "AggregateOffer",
+            "lowPrice": "159",
+            "highPrice": "265",
+            "priceCurrency": "CNY",
+            "availability": "https://schema.org/InStock"
+        },
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.8",
+            "reviewCount": "50"
+        }
+    }
+    </script>
+
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-XXXXXXXXXX');
+    </script>
+
     <style>
         * {
             margin: 0;
@@ -42,6 +81,178 @@
         .header .subtitle {
             color: #666;
             font-size: 1.1rem;
+            margin-bottom: 20px;
+        }
+
+        .result-highlight {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            flex-wrap: wrap;
+            margin: 20px 0;
+            padding: 20px;
+            background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
+            border-radius: 12px;
+        }
+
+        .result-item {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            color: #2c3e50;
+            font-size: 0.95rem;
+        }
+
+        .result-item span {
+            font-weight: bold;
+            color: #667eea;
+        }
+
+        /* Loading 动画 */
+        #loader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 10000;
+            transition: opacity 0.5s ease;
+        }
+
+        #loader.hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .spinner {
+            width: 60px;
+            height: 60px;
+            border: 4px solid rgba(255,255,255,0.3);
+            border-top-color: white;
+            border-radius: 50%;
+            animation: spin 0.8s linear infinite;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
+
+        /* 骨架屏 */
+        .skeleton {
+            background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
+            background-size: 200% 100%;
+            animation: shimmer 1.5s infinite;
+            border-radius: 8px;
+        }
+
+        @keyframes shimmer {
+            0% { background-position: 200% 0; }
+            100% { background-position: -200% 0; }
+        }
+
+        /* 搜索功能 */
+        .search-container {
+            margin: 20px 0;
+        }
+
+        .search-box {
+            width: 100%;
+            padding: 15px 25px;
+            border: 2px solid #e0e0e0;
+            border-radius: 25px;
+            font-size: 1rem;
+            transition: all 0.3s;
+            outline: none;
+            background: white;
+        }
+
+        .search-box:focus {
+            border-color: #667eea;
+            box-shadow: 0 0 0 4px rgba(102, 126, 234, 0.1);
+        }
+
+        /* 用户评价区 */
+        .reviews-section {
+            margin: 30px 0;
+            background: white;
+            border-radius: 20px;
+            padding: 30px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+        }
+
+        .reviews-section h3 {
+            text-align: center;
+            margin-bottom: 25px;
+            color: #2c3e50;
+        }
+
+        .rating-summary {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            margin-bottom: 30px;
+            padding: 20px;
+            background: #f8f9fa;
+            border-radius: 15px;
+        }
+
+        .rating-average {
+            text-align: center;
+        }
+
+        .rating-average .score {
+            font-size: 3rem;
+            font-weight: bold;
+            color: #ff6b6b;
+        }
+
+        .rating-average .stars {
+            font-size: 1.5rem;
+            color: #ffc107;
+        }
+
+        .rating-average .count {
+            color: #666;
+            font-size: 0.9rem;
+        }
+
+        .review-card {
+            padding: 20px;
+            border: 1px solid #e0e0e0;
+            border-radius: 12px;
+            margin-bottom: 15px;
+        }
+
+        .review-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+
+        .review-author {
+            font-weight: bold;
+            color: #2c3e50;
+        }
+
+        .review-stars {
+            color: #ffc107;
+        }
+
+        .review-text {
+            color: #555;
+            line-height: 1.6;
+        }
+
+        .review-date {
+            color: #999;
+            font-size: 0.85rem;
+            margin-top: 10px;
         }
 
         .price-banner {
@@ -783,6 +994,11 @@
     </style>
 </head>
 <body>
+    <!-- Loading 动画 -->
+    <div id="loader">
+        <div class="spinner"></div>
+    </div>
+
     <!-- 侧边导航按钮 -->
     <button class="sidebar-toggle" onclick="toggleSidebar()" title="快速导航">📋</button>
 
@@ -799,7 +1015,19 @@
 
         <div class="header">
             <h1 id="page-title">📚 个人成长资源套装</h1>
-            <p id="page-subtitle" class="subtitle">即用型工具 · 立即提升效率 · 快速实现目标</p>
+            <p id="page-subtitle" class="subtitle">30天实现成长蜕变 · 即用型工具 · 快速实现目标</p>
+
+            <!-- 搜索框 -->
+            <div class="search-container">
+                <input type="text" class="search-box" id="searchInput" placeholder="🔍 搜索套装（如：写作、目标、思维、学习）..." onkeyup="searchProducts()">
+            </div>
+
+            <div class="result-highlight">
+                <div class="result-item">📝 <span>30天完成10篇文章</span></div>
+                <div class="result-item">🎯 <span>90天达成核心目标</span></div>
+                <div class="result-item">🧠 <span>21天建立思维习惯</span></div>
+                <div class="result-item">📚 <span>28天掌握高效学习</span></div>
+            </div>
 
             <div class="price-banner" id="price-banner">
                 <span>🔥 完整套装仅需 ¥159</span>
@@ -808,7 +1036,7 @@
             </div>
 
             <div style="margin-top: 20px;" id="complete-buy-btn">
-                <a href="#payment-complete" class="btn btn-primary" style="display: inline-block; padding: 15px 40px; font-size: 1.1rem;">
+                <a href="#payment-complete" class="btn btn-primary" style="display: inline-block; padding: 15px 40px; font-size: 1.1rem;" onclick="openPaymentModal('https://your-xiaoe-link-complete.com'); return false;">
                     🎉 购买完整套装 ¥159
                 </a>
             </div>
@@ -1048,8 +1276,24 @@
                     ¥99
                 </div>
 
+                <!-- 支付保障说明 -->
+                <div style="margin-top: 15px; padding: 15px; background: #f8f9fa; border-radius: 10px; font-size: 0.9rem;">
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 8px;">
+                        <span style="color: #27ae60;">🔒</span>
+                        <span>安全支付 - 小鹅通担保交易</span>
+                    </div>
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 8px;">
+                        <span style="color: #27ae60;">⚡</span>
+                        <span>自动发货 - 30分钟内发送资源</span>
+                    </div>
+                    <div style="display: flex; align-items: center; gap: 10px;">
+                        <span style="color: #27ae60;">↩️</span>
+                        <span>7天退款 - 不满意全额退款</span>
+                    </div>
+                </div>
+
                 <div class="buttons">
-                    <a href="#payment-writing" class="btn btn-primary">购买套装 ¥99</a>
+                    <a href="#payment-writing" class="btn btn-primary" onclick="openPaymentModal('https://your-xiaoe-link-writing.com'); return false;">购买套装 ¥99</a>
                     <a href="writing-details.html" class="view-details-btn">查看详细介绍</a>
                 </div>
 
@@ -1346,8 +1590,24 @@
                     ¥79
                 </div>
 
+                <!-- 支付保障说明 -->
+                <div style="margin-top: 15px; padding: 15px; background: #f8f9fa; border-radius: 10px; font-size: 0.9rem;">
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 8px;">
+                        <span style="color: #27ae60;">🔒</span>
+                        <span>安全支付 - 小鹅通担保交易</span>
+                    </div>
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 8px;">
+                        <span style="color: #27ae60;">⚡</span>
+                        <span>自动发货 - 30分钟内发送资源</span>
+                    </div>
+                    <div style="display: flex; align-items: center; gap: 10px;">
+                        <span style="color: #27ae60;">↩️</span>
+                        <span>7天退款 - 不满意全额退款</span>
+                    </div>
+                </div>
+
                 <div class="buttons">
-                    <a href="#payment-goals" class="btn btn-primary">购买套装 ¥79</a>
+                    <a href="#payment-goals" class="btn btn-primary" onclick="openPaymentModal('https://your-xiaoe-link-goals.com'); return false;">购买套装 ¥79</a>
                     <a href="goals-details.html" class="view-details-btn">查看详细介绍</a>
                 </div>
                 </div>
@@ -1610,8 +1870,24 @@
                     ¥89
                 </div>
 
+                <!-- 支付保障说明 -->
+                <div style="margin-top: 15px; padding: 15px; background: #f8f9fa; border-radius: 10px; font-size: 0.9rem;">
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 8px;">
+                        <span style="color: #27ae60;">🔒</span>
+                        <span>安全支付 - 小鹅通担保交易</span>
+                    </div>
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 8px;">
+                        <span style="color: #27ae60;">⚡</span>
+                        <span>自动发货 - 30分钟内发送资源</span>
+                    </div>
+                    <div style="display: flex; align-items: center; gap: 10px;">
+                        <span style="color: #27ae60;">↩️</span>
+                        <span>7天退款 - 不满意全额退款</span>
+                    </div>
+                </div>
+
                 <div class="buttons">
-                    <a href="#payment-thinking" class="btn btn-primary">购买套装 ¥89</a>
+                    <a href="#payment-thinking" class="btn btn-primary" onclick="openPaymentModal('https://your-xiaoe-link-thinking.com'); return false;">购买套装 ¥89</a>
                     <a href="thinking-details.html" class="view-details-btn">查看详细介绍</a>
                 </div>
 
@@ -1905,8 +2181,24 @@
                     ¥99
                 </div>
 
+                <!-- 支付保障说明 -->
+                <div style="margin-top: 15px; padding: 15px; background: #f8f9fa; border-radius: 10px; font-size: 0.9rem;">
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 8px;">
+                        <span style="color: #27ae60;">🔒</span>
+                        <span>安全支付 - 小鹅通担保交易</span>
+                    </div>
+                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 8px;">
+                        <span style="color: #27ae60;">⚡</span>
+                        <span>自动发货 - 30分钟内发送资源</span>
+                    </div>
+                    <div style="display: flex; align-items: center; gap: 10px;">
+                        <span style="color: #27ae60;">↩️</span>
+                        <span>7天退款 - 不满意全额退款</span>
+                    </div>
+                </div>
+
                 <div class="buttons">
-                    <a href="#payment-learning" class="btn btn-primary">购买套装 ¥99</a>
+                    <a href="#payment-learning" class="btn btn-primary" onclick="openPaymentModal('https://your-xiaoe-link-learning.com'); return false;">购买套装 ¥99</a>
                     <a href="learning-details.html" class="view-details-btn">查看详细介绍</a>
                 </div>
 
@@ -2442,6 +2734,54 @@
         </div>
     </div>
 
+    <!-- 用户评价区 -->
+    <div class="reviews-section" id="reviews">
+        <h3>⭐ 用户评价 (4.8/5.0)</h3>
+        <div class="rating-summary">
+            <div class="rating-average">
+                <div class="score">4.8</div>
+                <div class="stars">★★★★★</div>
+                <div class="count">50+ 条评价</div>
+            </div>
+        </div>
+
+        <div class="review-card">
+            <div class="review-header">
+                <span class="review-author">张伟 · 程序员</span>
+                <span class="review-stars">★★★★★</span>
+            </div>
+            <p class="review-text">"写作套装太实用了！之前写文章要花一整天，现在用模板2小时就能完成。30天行动指南帮我把写作变成了习惯。"</p>
+            <div class="review-date">2025-01-15</div>
+        </div>
+
+        <div class="review-card">
+            <div class="review-header">
+                <span class="review-author">王芳 · 自由职业者</span>
+                <span class="review-stars">★★★★★</span>
+            </div>
+            <p class="review-text">"目标套装让我终于完成了拖延3年的项目。90天行动指南很系统，一步步跟着做，不知不觉就达成了目标。"</p>
+            <div class="review-date">2025-01-12</div>
+        </div>
+
+        <div class="review-card">
+            <div class="review-header">
+                <span class="review-author">刘敏 · 学生</span>
+                <span class="review-stars">★★★★☆</span>
+            </div>
+            <p class="review-text">"思维套装很好用，费曼技巧和思维导图帮我理解了很多难点。学习套装的间隔重复法背单词效率提升了很多。"</p>
+            <div class="review-date">2025-01-10</div>
+        </div>
+
+        <div class="review-card">
+            <div class="review-header">
+                <span class="review-author">陈刚 · 企业高管</span>
+                <span class="review-stars">★★★★★</span>
+            </div>
+            <p class="review-text">"买了完整套装，物超所值。特别是Newsletter运营指南，帮我建立了自己的读者群，现在每月收入增加了2000+。"</p>
+            <div class="review-date">2025-01-08</div>
+        </div>
+    </div>
+
     <script>
         // 切换套装展开/收起
         function toggleProductExpand(productId, btn) {
@@ -2715,6 +3055,90 @@
                 }
             });
         });
+
+        // 支付弹窗功能
+        let currentPaymentLink = '';
+
+        function openPaymentModal(link) {
+            document.getElementById('payment-modal').style.display = 'block';
+            currentPaymentLink = link;
+        }
+
+        function closePaymentModal() {
+            document.getElementById('payment-modal').style.display = 'none';
+            currentPaymentLink = '';
+        }
+
+        function confirmPayment() {
+            if (currentPaymentLink) {
+                window.open(currentPaymentLink, '_blank');
+            }
+            closePaymentModal();
+        }
+
+        // 点击弹窗外部关闭
+        document.addEventListener('click', function(e) {
+            const modal = document.getElementById('payment-modal');
+            if (e.target === modal) {
+                closePaymentModal();
+            }
+        });
+
+        // 页面加载完成后隐藏 loader
+        window.addEventListener('load', function() {
+            setTimeout(() => {
+                document.getElementById('loader').classList.add('hidden');
+            }, 300);
+        });
+
+        // 搜索功能
+        function searchProducts() {
+            const searchText = document.getElementById('searchInput').value.toLowerCase();
+            const products = document.querySelectorAll('.product');
+
+            products.forEach(product => {
+                const title = product.querySelector('.product-title')?.textContent.toLowerCase() || '';
+                const desc = product.querySelector('.product-desc')?.textContent.toLowerCase() || '';
+                const features = Array.from(product.querySelectorAll('.feature-text'))
+                    .map(f => f.textContent.toLowerCase())
+                    .join(' ');
+
+                if (title.includes(searchText) || desc.includes(searchText) || features.includes(searchText)) {
+                    product.style.display = 'block';
+                } else {
+                    product.style.display = searchText === '' ? 'block' : 'none';
+                }
+            });
+
+            // 追踪搜索事件
+            if (searchText && typeof gtag !== 'undefined') {
+                gtag('event', 'search', {
+                    'search_term': searchText
+                });
+            }
+        }
     </script>
+
+    <!-- 支付说明弹窗 -->
+    <div id="payment-modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 9999;">
+        <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 40px; border-radius: 20px; max-width: 500px; width: 90%; box-shadow: 0 10px 40px rgba(0,0,0,0.3);">
+            <h3 style="margin-bottom: 20px; color: #2c3e50; font-size: 1.5rem;">💳 支付说明</h3>
+            <p style="color: #666; margin-bottom: 15px; line-height: 1.6;">
+                我们使用小鹅通安全支付平台，支持多种支付方式：
+            </p>
+            <ul style="margin-bottom: 20px; color: #666; padding-left: 20px; line-height: 1.8;">
+                <li>✅ 微信支付</li>
+                <li>✅ 支付宝支付</li>
+                <li>✅ 银行卡支付</li>
+            </ul>
+            <p style="color: #666; margin-bottom: 25px; line-height: 1.6;">
+                购买后30分钟内自动发送资源链接到您的邮箱
+            </p>
+            <div style="display: flex; gap: 10px;">
+                <button onclick="closePaymentModal()" style="flex: 1; padding: 12px; background: #f0f0f0; color: #666; border: none; border-radius: 8px; cursor: pointer; font-size: 16px; font-weight: 600;">取消</button>
+                <button onclick="confirmPayment()" style="flex: 1; padding: 12px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border: none; border-radius: 8px; cursor: pointer; font-size: 16px; font-weight: 600;">去支付</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
