--- a/subscribe.html
+++ b/subscribe.html
@@ -14,6 +14,9 @@
         gtag('config', 'G-MPQTS8G2HD');
     </script>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23000000' rx='12'/><text x='50' y='75' font-family='Georgia, Times New Roman, serif' font-size='72' font-weight='bold' fill='white' text-anchor='middle' letter-spacing='-1'>C</text></svg>">
+
     <style>
         * {
             margin: 0;
