Fix: 更新所有页面的 Google Analytics ID 和 favicon

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     <script src="https://cdn.jsdelivr.net/npm/marked@12.0.0/marked.min.js"></script>
 
     <!-- Google Analytics 4 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MPQTS8G2HD"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX');
+        gtag('config', 'G-MPQTS8G2HD');
     </script>
 
     <title>COLIN - Explore Deep Thoughts</title>
